syntax = "proto3";

package client_service;
option go_package = "genproto/client_service";

import "client_model.proto";

service ClientService {
  rpc CreateClient(Client) returns (ClientWithGUID);
  rpc GetClient(ClientWithGUID) returns (Client);
  rpc UpdateClient(Client) returns (Client);
  rpc DeleteClient(ClientWithGUID) returns (DeleteClientResponse);
  rpc GetAllClients(ListRequest) returns (ListClientResponse);
  rpc GetAllDeletedClients(ListRequest) returns (ListClientResponse);
  rpc GetAllHiddenClients(ListRequest) returns (ListClientResponse);

  rpc UniqueEmail(IsUnique) returns (ResponseStatus);
  rpc UpdateRefresh(RefreshRequest) returns (ResponseStatus);
  rpc UpdatePassword(UpdatePasswordRequest) returns (ResponseStatus);
}